# ARKRenderer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/sandbox/: main.cpp
assets/models/: alpha_modes_fixture.gltf  bloom_validation_fixture.gltf  forward_fixture.gltf  forward_multidraw_fixture.gltf  forward_multinode_fixture.gltf  forward_tangent_fixture.gltf  material_ball_validation_fixture.gltf  sampler_fixture.gltf  shadow_probe_spheres.gltf  specular_ibl_validation_fixture.gltf  texcoord1_fixture.gltf  texture_cache_fixture.gltf  texture_transform_fixture.gltf
assets/models/sponza/: sponza.gltf
docs/: codex_handoff.md  dependency.md
docs/bugs/: shadow_csm_abnormal_movement.md
docs/design/: file_system_and_shader_loading.md  framework.md  module_responsibility.md
docs/phase/: phase01.md  phase02.md  phase03.md  phase04.md  phase04_1.md  phase05.md  phase06.md  phase07.md  phase08.md  phase09.md  phase10.md  phase11.md  phase12.md  phase13.md  phase14.md  phase15.md  phase16.md  phase17.md  phase18.md  phase19.md  phase20.md  phase21.md  phase22.md  phase23.md  phase24.md  phase25.md  phase26.md  phase27.md  phase28.md  phase29.md  phase30.md  phase31.md  phase32.md  phase33.md  phase34.md  phase35.md  phase36.md  phase37.md  phase38.md  phase39.md  (+34 more)
shaders/: bloom.frag.hlsl  brdf_lut.frag.hlsl  cube.vert.hlsl  equirect_to_cube.frag.hlsl  equirect_to_cube.vert.hlsl  irradiance_convolve.frag.hlsl  mesh.frag.hlsl  mesh.vert.hlsl  shadow.frag.hlsl  shadow.vert.hlsl  skybox.frag.hlsl  specular_prefilter.frag.hlsl  ssao.frag.hlsl  ssao_normal_depth.frag.hlsl  ssao_normal_depth.vert.hlsl  textured_cube.frag.hlsl  textured_cube.vert.hlsl  tonemap.frag.hlsl  triangle.frag.hlsl  triangle.vert.hlsl
src/app/: Application.cpp  Application.h  GlfwWindow.cpp  GlfwWindow.h  Input.h  SandboxCameraController.cpp  SandboxCameraController.h  SandboxDebugUi.cpp  SandboxDebugUi.h  SandboxLaunchOptions.cpp  SandboxLaunchOptions.h  SandboxRuntimeSettings.cpp  SandboxRuntimeSettings.h  Window.h
src/asset/: GltfLoader.cpp  GltfLoader.h  MeshData.cpp  MeshData.h  ShaderCompiler.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/core/: Assert.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Memory.h  NonCopyable.h  Result.h  ScopeExit.h  Timer.h  Types.h
src/renderer/: Bounds.h  CubemapOrientation.h  EnvironmentBrdfLutGenerator.cpp  EnvironmentBrdfLutGenerator.h  EnvironmentBrdfLutResource.cpp  EnvironmentBrdfLutResource.h  EnvironmentCubeConverter.cpp  EnvironmentCubeConverter.h  EnvironmentCubeResource.cpp  EnvironmentCubeResource.h  EnvironmentIrradianceGenerator.cpp  EnvironmentIrradianceGenerator.h  EnvironmentResource.cpp  EnvironmentResource.h  EnvironmentSpecularPrefilterGenerator.cpp  FrameContext.h  FrameOverlay.h  FrameRenderer.cpp  FrameRenderer.h  Frustum.cpp  Frustum.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  PostProcessingSettings.cpp  PostProcessingSettings.h  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderQueue.cpp  RenderQueue.h  RenderScene.cpp  RenderScene.h  RenderView.cpp  RenderView.h  Renderer.cpp  Renderer.h  RendererPreset.cpp  RendererPreset.h  (+14 more)
src/renderer/core/: FrameOverlay.h  FrameRenderer.cpp  FrameRenderer.h  Frustum.cpp  Frustum.h  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderQueue.cpp  RenderQueue.h
src/renderer/material/: Material.h  MaterialResource.cpp  MaterialResource.h  MaterialSystem.h
src/renderer/passes/: BloomPass.cpp  BloomPass.h  ClearPass.cpp  ClearPass.h  CubePass.cpp  CubePass.h  ForwardPass.cpp  ForwardPass.h  ImGuiPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h  ToneMappingPass.cpp  ToneMappingPass.h  TrianglePass.cpp  TrianglePass.h
src/renderer/presets/: RendererPreset.cpp  RendererPreset.h
src/renderer/resources/: EnvironmentBrdfLutResource.cpp  EnvironmentCubeResource.cpp  EnvironmentResource.cpp  EnvironmentResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  TextureCache.cpp  TextureCache.h  TextureResource.cpp
src/renderer/scene/: SceneResource.cpp  SceneResource.h
src/renderer/settings/: PostProcessingSettings.cpp  PostProcessingSettings.h  RendererQuality.cpp  RendererQuality.h  ShadowDebugSettings.h
src/rhi/: Buffer.h  DescriptorSet.h  DescriptorSetLayout.h  DeviceContext.h  Fence.h  FrameResource.h  PipelineLayout.h  PipelineState.h  RHICommon.h  RenderBackend.cpp  RenderBackend.h  RenderDevice.h  ResourceBarrier.h  Sampler.h  Shader.h  SwapChain.h  Texture.h  TextureView.h  VertexInput.h
src/rhi/detail/: RenderBackendFactory.h
src/rhi/vulkan/: Volk.cpp  VulkanAllocator.cpp  VulkanAllocator.h  VulkanBackendFactory.cpp  VulkanBindlessResourceManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandContext.cpp  VulkanCommandContext.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanCommandQueue.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDeletionQueue.h  VulkanDescriptorAllocator.h  VulkanDescriptorManager.cpp  (+32 more)
tests/: bloom_pass_smoke.cpp  bloom_validation_fixture_smoke.cpp  bounds_smoke.cpp  brdf_lut_smoke.cpp  cubemap_orientation_contract_smoke.cpp  cubemap_orientation_pixel_smoke.cpp  dependency_smoke.cpp  environment_cube_resource_smoke.cpp  environment_irradiance_smoke.cpp  environment_resource_smoke.cpp  equirectangular_to_cube_smoke.cpp  forward_pass_pipeline_smoke.cpp  frame_validation_smoke.cpp  framework_headers_smoke.cpp  frustum_smoke.cpp  gltf_loader_smoke.cpp  mesh_data_smoke.cpp  model_resource_smoke.cpp  post_processing_settings_smoke.cpp  readback_api_smoke.cpp  render_scene_queue_smoke.cpp  renderer_preset_smoke.cpp  renderer_public_headers_smoke.cpp  renderer_quality_smoke.cpp  sandbox_camera_controller_smoke.cpp  sandbox_ui_settings_smoke.cpp  scene_resource_smoke.cpp  shader_assets_smoke.cpp  shadow_cascade_builder_smoke.cpp  shadow_pass_smoke.cpp  skybox_pass_smoke.cpp  specular_prefilter_smoke.cpp  ssao_pass_smoke.cpp  texture_loader_smoke.cpp  tone_mapping_pass_smoke.cpp
(+21 files in other folders)
